--- a/Цели и задачи.md
+++ b/Цели и задачи.md
@@ -1,2 +1,8 @@
 # Цели и задачи проекта
-Наш проект «Researchers» является автоматизированной системой специального назначения, основанный на технологии искусственного интеллекта и придуман для того, чтобы делать любую водную среду чище и безопаснее (в плане отравляющих веществ и опасных предметов, находящихся на дне). Целью этого проекта является очищение акватории от мусора, лежащего на дне и опасных веществ, разбавленных в самой воде. Задачи этой разработки заключаются в следующем: обследование дна водоема на наличие мусора, сообщение о результатах исследования и дальнейшая очистка загрязненного участка.
+Наш проект «Researchers» является автоматизированной системой специального назначения, основанный на технологии искусственного интеллекта и придуман для того, чтобы делать любую водную среду чище и безопаснее (в плане отравляющих веществ и опасных предметов, находящихся на дне). 
+
+ЦЕЛЬЮ этого проекта является:
+Очищение акватории от мусора, лежащего на дне и опасных веществ, разбавленных в самой воде. 
+
+ЗАДАЧИ этой разработки заключаются в следующем: 
+Исследование дна водоема на наличие мусора, сбор информации о наличии в воде отравляющих или опасных веществ, сообщение о результатах исследования и уведомление о необходимой очистке загрязненного участка.
